# image_proc

./: .gitignore  README.md
docker/: Dockerfile  build_image.sh
lib/Adder/: CMakeLists.txt  Makefile  adder.cpp  adder.hpp
lib/Convolution/: CMakeLists.txt  Makefile  Plan_1d_FFT.hpp  Plan_2d_FFT.hpp
lib/PNG_Reader/: CMakeLists.txt  Makefile  PNG_Reader.hpp
scripts/: build.sh  run.sh
src/: image_proc.cpp
